--- a/GrupoEmpresarial-war/web/plantilla/encabezado.xhtml
+++ b/GrupoEmpresarial-war/web/plantilla/encabezado.xhtml
@@ -6,7 +6,7 @@
     <h:body>   
         <ui:composition>
             <div class="ui-grid ui-grid-responsive">
-                <!--h:outputText value="#{nerv['header.title']}" /--> 
+                <!--h:outputText value="#{resourceSistema['header.title']}" /--> 
                 <div class="ui-grid-row">
                     <div class="ui-grid-col-3" style="text-align: left;">
                         <p:graphicImage value="/resources/imagen/dane.png" width="320" height="87"/>
