--- a/GrupoEmpresarial-war/web/plantilla/plantilla.xhtml
+++ b/GrupoEmpresarial-war/web/plantilla/plantilla.xhtml
@@ -17,7 +17,7 @@
             <h:outputStylesheet library="css" name="general.css" />
             <h:outputStylesheet library="css" name="titulos.css" />
             <h:outputStylesheet library="css" name="componentes.css" />
-            <title>#{nerv['sistema.title']}</title>
+            <title>#{resourceSistema['sistema.title']}</title>
         </h:head>
 
         <h:body>
@@ -28,7 +28,7 @@
                     <ui:include src="encabezado.xhtml" />
                 </p:layoutUnit>
 
-                <!--p:layoutUnit position="west" size="250" header="#{nerv['menu.title']}" collapsible="true"-->
+                <!--p:layoutUnit position="west" size="250" header="#{resourceSistema['menu.title']}" collapsible="true"-->
                 <p:layoutUnit position="west" size="250" collapsible="false">
                     <ui:include src="menu.xhtml" />
                 </p:layoutUnit>
