--- a/GrupoEmpresarial-war/web/interfaz/establecimiento/itz-informe-establecimiento.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/establecimiento/itz-informe-establecimiento.xhtml
@@ -3,10 +3,15 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:pe="http://primefaces.org/ui/extensions">
+
     <h:body>
         <ui:composition template="/plantilla/plantilla.xhtml">
             <ui:define name="content">
+                <p:dialog modal="true" widgetVar="statusDialog" header="Estado" draggable="false" closable="false" resizable="false" appendTo="@(body)">
+                    <p:graphicImage name="imagen/ajax-donwload.gif" />
+                </p:dialog>
                 <h:form id="frmInfEstablecimiento" style="height: 88%; padding-right: 2%; padding-left: 2%;" >
                     <p:growl id="msnInforUnidadLegal" showDetail="true" />
                     <h3 class="titulo-center-h3">INFORMACIÓN DE LOS ESTABLECIMIENTOS</h3>
@@ -31,11 +36,11 @@
                                 <p>En esta sección el usuario puede generar un reporte en formato PDF, donde se describe todos establecimientos de la unidad legal seleccionada.</p>
                                 <p:commandButton id="btnGenerarReporteEstablecimientos"  disabled="#{empty MbFormEstablecimiento.listaIdentificacion}" rendered="#{aplicacionPrincipal.browserName != 'Internet Explorer'}"
                                                  value="Generar reporte" update="frmInfEstablecimiento:dlgReportePdf" oncomplete="PF('dlg').show();" 
-                                                 actionListener="#{MbReporteEstablecimiento.generarReporteEstablecimientosPdf(nerv['reporte.establecimientos.path'], nerv['reporte.establecimientos.archivo'])}"/>
+                                                 actionListener="#{MbReporteEstablecimiento.generarReporteEstablecimientosPdf()}"/>
                                 <!--p:media value="#{MbReporteEstablecimiento.contenido}" cache="false" width="100%" height="90%" player="pdf"/-->
                                 <p:commandButton id="btnDescargarReporteEstablecimiento" value="Descargar" ajax="false" 
                                                  rendered="#{aplicacionPrincipal.browserName eq 'Internet Explorer'}" disabled="#{empty MbFormEstablecimiento.listaIdentificacion}"
-                                                 actionListener="#{MbReporteEstablecimiento.generarReporteEstablecimientosPdf(nerv['reporte.establecimientos.path'], nerv['reporte.establecimientos.archivo'])}"
+                                                 actionListener="#{MbReporteEstablecimiento.generarReporteEstablecimientosPdf()}"
                                                  onclick="PrimeFaces.monitorDownload(start, stop);" icon="ui-icon-arrowthick-1-s">
                                     <p:fileDownload value="#{MbReporteEstablecimiento.contenido}" />
                                 </p:commandButton>
@@ -61,9 +66,17 @@
                                         </p:column>
                                         <p:column headerText="">
                                             <p:commandLink update="frmInfEstablecimiento:dlgReportePdf" oncomplete="PF('dlg').show();" 
-                                                 actionListener="#{MbReporteEstablecimiento.generarReporteEstablecimientoPdf(nerv['reporte.establecimiento.path'], nerv['reporte.establecimiento.archivo'],fila.id.id)}" >
+                                                 actionListener="#{MbReporteEstablecimiento.generarReporteEstablecimientoPdf(fila.id.id)}" 
+                                                  rendered="#{aplicacionPrincipal.browserName != 'Internet Explorer'}">
                                                 <!--h:outputText value="Reporte de datos" /-->
                                                 <div class="ui-grid-col-3"><i class="fa fa-fw fa-file-pdf-o"></i>Reporte</div>
+                                            </p:commandLink>
+                                            <p:commandLink actionListener="#{MbReporteEstablecimiento.generarReporteEstablecimientoPdf(fila.id.id)}" 
+                                                            rendered="#{aplicacionPrincipal.browserName eq 'Internet Explorer'}"
+                                                            onclick="PrimeFaces.monitorDownload(start, stop);" ajax="false" >
+                                                <!--h:outputText value="Reporte de datos" /-->
+                                                <div class="ui-grid-col-3"><i class="fa fa-fw fa-file-pdf-o"></i>Descargar</div>
+                                                <p:fileDownload value="#{MbReporteEstablecimiento.contenido}" />
                                             </p:commandLink>
                                             <p:commandLink action="#{MbFormEstablecimiento.abrirFormularioActualizarDatos(fila.id.id)}" ajax="false">
                                                 <!--h:outputText value="Formulario actualización datos" /-->
@@ -80,8 +93,8 @@
                                 <p>En esta sección el usuario puede descargar un archivo XLS, que contiene la información del grupo empresarial, la cual podra
                                     actualizar de forma local y al terminar subir el archivo para actualizar los datos.</p>
                                 <p:commandButton id="btnGenerarXlsEstablecimiento" value="Generar Excel" ajax="false"  disabled="#{empty MbFormEstablecimiento.listaIdentificacion}" 
-                                                 actionListener="#{MbEscribirExcelEstablecimiento.generarArchivoXls(nerv['plantilla.establecimiento.path'], nerv['plantilla.establecimiento.archivo'])}"
-                                                 onclick="PrimeFaces.monitorDownload(start, stop);" icon="ui-icon-arrowthick-1-s">
+                                                 actionListener="#{MbEscribirExcelEstablecimiento.generarArchivoXls()}"
+                                                 onclick="PrimeFaces.monitorDownload(start, stop);" icon="ui-icon-arrowthick-1-s" update="msnInforUnidadLegal">
                                     <p:fileDownload value="#{MbEscribirExcelEstablecimiento.file}" />
                                 </p:commandButton>
                                 <p>Subir el archivo con la ifnromación de los establecimientos diligenciados para actualizar los datos.</p>
@@ -98,7 +111,13 @@
                         <!--p:panelGrid id="pnlReportePdf" columns="1" style="width: 100%; height: 100%">
                             </p:panelGrid-->
                         <p:outputPanel deferred="true">
-                            <p:media value="#{MbReporteEstablecimiento.contenido}" cache="false" width="756" height="550" player="pdf"/>
+                            <!--p:media value="#{MbReporteEstablecimiento.contenido}" cache="false" width="756" height="550" player="pdf">
+                                <br></br>
+                                <br></br>
+                                #{MbReporteEstablecimiento.listaErrores}
+                            </p:media-->
+                            <pe:documentViewer height="535" value="#{MbReporteEstablecimiento.contenido}"/>
+                            #{MbReporteEstablecimiento.listaErrores}
                         </p:outputPanel>
                     </p:dialog>
 
@@ -116,10 +135,15 @@
                     </p:blockUI>
                 </h:form>
 
-                <p:dialog modal="true" widgetVar="statusDialog" header="Status" draggable="false" closable="false" resizable="false">
-                    <p:graphicImage name="imagen/ajax-donwload.gif" />
-                </p:dialog>
+                <script type="text/javascript">
+                    function start() {
+                        PF('statusDialog').show();
+                    }
 
+                    function stop() {
+                        PF('statusDialog').hide();
+                    }
+                </script>
             </ui:define>
         </ui:composition>
     </h:body>
