--- a/GrupoEmpresarial-war/web/plantilla/pie-pagina.xhtml
+++ b/GrupoEmpresarial-war/web/plantilla/pie-pagina.xhtml
@@ -14,7 +14,7 @@
                 </div>
                 <div class="ui-grid-row">
                     <div class="ui-grid-col-12">
-                        <h:outputText value="#{nerv['footer.copyright']}" />
+                        <h:outputText value="#{resourceSistema['footer.copyright']}" />
                     </div>
                 </div>
                 </div>
