--- a/GrupoEmpresarial-war/web/plantilla/plantilla.xhtml
+++ b/GrupoEmpresarial-war/web/plantilla/plantilla.xhtml
@@ -29,7 +29,8 @@
                 </p:layoutUnit>
 
                 <!--p:layoutUnit position="west" size="250" header="#{resourceSistema['menu.title']}" collapsible="true"-->
-                <p:layoutUnit position="west" size="250" collapsible="false">
+                <p:layoutUnit position="west" header="&nbsp;" size="250" collapsible="true">
+                <!--p:layoutUnit position="west" size="250" collapsible="false"-->
                     <ui:include src="menu.xhtml" />
                 </p:layoutUnit>
 
