37-Commit Commit antes de iniciar la implementación de los ajustes de las observaciones generadas de las primeras pruebas por parte de Ana Cecilia

--- a/GrupoEmpresarial-war/web/interfaz/unidad-legal/componente/cpt-formulario-identificacion.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/unidad-legal/componente/cpt-formulario-identificacion.xhtml
@@ -192,9 +192,10 @@
                 <p:message for="txtTelefonoContacto"/>
                 <p:graphicImage id="imgAyudaTelefonoContacto1" value="/resources/icon/icono-de-ayuda.png" />
                 <p:tooltip for="imgAyudaTelefonoContacto1">
-                    <p>Puede adicionar información como el indicativo o extención <br></br>
-                        y adicionar más de un número telefonico separado por (;)</p>
-                    <p>Formato: (indicativo)telefono,extención-extención;<br></br>
+                    <p>Puede adicionar información como el indicativo o extensión <br></br>
+                        y adicionar más de un número telefonico separado por <br></br>
+                        punto y coma(;)</p>
+                    <p>Formato: (indicativo)telefono,extensión-extensión;<br></br>
                         Ejemplo: (094)777785,2625;(091)7885287,1515-1516;</p>
                 </p:tooltip>
             </h:panelGrid>
