--- a/GrupoEmpresarial-war/web/interfaz/unidad-legal/componente/cpt-formulario-tamano.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/unidad-legal/componente/cpt-formulario-tamano.xhtml
@@ -34,7 +34,10 @@
                 <p:message for="txtActivo" />
                 <p:graphicImage id="imgAyudaActivo" value="/resources/icon/icono-de-ayuda.png" />
                 <p:tooltip for="imgAyudaActivo">
-                    <p>Todas las cifras monetarias debe ser diligenciadas en pesos Colombianos.</p>
+                    <p>Todas las cifras monetarias debe ser diligenciadas en pesos Colombianos.<br></br>
+                        No se debe ingresar caracteres de separación de miles, ni comas ni punto.<br></br>
+                        No se deben ingresar los valores con decimales.
+                    </p>
                 </p:tooltip>
             </h:panelGrid>
 
