--- a/GrupoEmpresarial-war/web/plantilla/plantilla.xhtml
+++ b/GrupoEmpresarial-war/web/plantilla/plantilla.xhtml
@@ -23,7 +23,7 @@
         <h:body>
             <ui:debug/>
             <p:layout fullPage="true">
-
+                <ui:include src="../interfaz/utilidades/cpt-IdleMonitor.xhtml"/>
                 <p:layoutUnit position="north" size="100" closable="true" collapsible="false">
                     <ui:include src="encabezado.xhtml" />
                 </p:layoutUnit>
