--- a/GrupoEmpresarial-war/web/interfaz/grupo-empresa/componente/cpt-formulario-contacto.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/grupo-empresa/componente/cpt-formulario-contacto.xhtml
@@ -33,9 +33,10 @@
                 <p:message for="txtTelefonoContacto"/>
                 <p:graphicImage id="imgAyudaTelefonoContacto1" value="/resources/icon/icono-de-ayuda.png" />
                 <p:tooltip for="imgAyudaTelefonoContacto1">
-                    <p>Puede adicionar información como el indicativo o extención <br></br>
-                        y adicionar más de un número telefonico separado por (;)</p>
-                    <p>Formato: (indicativo)telefono,extención-extención;<br></br>
+                    <p>Puede adicionar información como el indicativo o extensión <br></br>
+                        y adicionar más de un número telefonico separado por <br></br>
+                        punto y coma(;)</p>
+                    <p>Formato: (indicativo)telefono,extensión-extensión;<br></br>
                         Ejemplo: (094)777785,2625;(091)7885287,1515-1516;</p>
                 </p:tooltip>
             </h:panelGrid>
@@ -70,9 +71,10 @@
                 <p:message for="txtTelefonoContacto2"/>
                 <p:graphicImage id="imgAyudaTelefonoContacto2" value="/resources/icon/icono-de-ayuda.png" />
                 <p:tooltip for="imgAyudaTelefonoContacto2">
-                    <p>Puede adicionar información como el indicativo o extención <br></br>
-                        y adicionar más de un número telefonico separado por (;)</p>
-                    <p>Formato: (indicativo)telefono,extención-extención;<br></br>
+                    <p>Puede adicionar información como el indicativo o extensión <br></br>
+                        y adicionar más de un número telefonico separado por <br></br>
+                        punto y coma(;)</p>
+                    <p>Formato: (indicativo)telefono,extensión-extensión;<br></br>
                         Ejemplo: (094)777785,2625;(091)7885287,1515-1516;</p>
                 </p:tooltip>
             </h:panelGrid>
@@ -104,9 +106,10 @@
                 <p:message for="txtTelefonoContacto3"/>
                 <p:graphicImage id="imgAyudaTelefonoContacto3" value="/resources/icon/icono-de-ayuda.png" />
                 <p:tooltip for="imgAyudaTelefonoContacto3">
-                    <p>Puede adicionar información como el indicativo o extención <br></br>
-                        y adicionar más de un número telefonico separado por (;)</p>
-                    <p>Formato: (indicativo)telefono,extención-extención;<br></br>
+                    <p>Puede adicionar información como el indicativo o extensión <br></br>
+                        y adicionar más de un número telefonico separado por <br></br>
+                        punto y coma(;)</p>
+                    <p>Formato: (indicativo)telefono,extensión-extensión;<br></br>
                         Ejemplo: (094)777785,2625;(091)7885287,1515-1516;</p>
                 </p:tooltip>
             </h:panelGrid>
