--- a/GrupoEmpresarial-war/web/plantilla/menu.xhtml
+++ b/GrupoEmpresarial-war/web/plantilla/menu.xhtml
@@ -21,6 +21,7 @@
                     </p:submenu>
                 </p:menu-->
                 <p:menu model="#{MbLogin.modeloMenu}" toggleable="true" style="width: 99%; border: none;"/>
+                <!--p:outputLabel value="#{view.viewId}"/-->
             </h:form>
         </ui:composition>
     </h:body>
