--- a/GrupoEmpresarial-war/web/interfaz/establecimiento/itz-formulario-establecimiento.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/establecimiento/itz-formulario-establecimiento.xhtml
@@ -6,7 +6,7 @@
     <h:body>
         <ui:composition template="/plantilla/plantilla.xhtml">
             <ui:define name="content">
-                <h:form style="padding-right: 2%; padding-left: 2%;">
+                <h:form  id="frmRegistroEstablecimiento" style="padding-right: 2%; padding-left: 2%;">
                     <h3 class="titulo-center-h3">FORMULARIO DE ACTUALIZACIÓN DEL ESTABLECIMIENTO</h3>
                     <p:spacer  height="10"/>
                     <p:growl id="gwFormEstablecimiento" sticky="true" showDetail="true" life="6000" />
@@ -36,7 +36,7 @@
                         <p:tab id="confirm" title="Confirmar datos">
                             <ui:include src="componente/cpt-formulario-resumen.xhtml"/>
                             <hr class="lineaGradian"/>
-                            <p:commandButton value="Actualizar Datos" action="#{MbFormEstablecimiento.actualizarEstablecimiento}" style="float: right; top: 3px;">
+                            <p:commandButton  id="btnActualizar" value="Actualizar Datos" action="#{MbFormEstablecimiento.actualizarEstablecimiento}" style="float: right; top: 3px;">
                                 <p:confirm header="Confirmación" icon="ui-icon-alert" message="Esta a punto de actualizar la información, desea continuar?"/>
                             </p:commandButton>
                         </p:tab>
@@ -49,6 +49,10 @@
                     </p:confirmDialog>
 
                 </h:form>
+                <p:blockUI block="frmRegistroEstablecimiento" widgetVar="blockUI" trigger="frmRegistroEstablecimiento:btnActualizar">
+                    Guardando datos...<br />
+                    <p:graphicImage name="imagen/ajax-loading.gif"/>
+                </p:blockUI>
             </ui:define>
         </ui:composition>
     </h:body>
