--- a/GrupoEmpresarial-war/web/interfaz/grupo-empresa/itz-formulario-grupo-empresa.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/grupo-empresa/itz-formulario-grupo-empresa.xhtml
@@ -6,7 +6,7 @@
     <h:body>
         <ui:composition template="/plantilla/plantilla.xhtml">
             <ui:define name="content">
-                <h:form style="padding-right: 2%; padding-left: 2%;">
+                <h:form id="frmRegistroGrupoEmpresa" style="padding-right: 2%; padding-left: 2%;">
                     <h3 class="titulo-center-h3">FORMULARIO DE ACTUALIZACIÓN DEL GRUPO EMPRESARIAL</h3>
                     <p:spacer  height="10"/>
                     <p:growl id="gwFormGrupoEmpresa" sticky="true" showDetail="true" life="6000" />
@@ -40,7 +40,7 @@
                         <p:tab id="confirm" title="Confirmar datos">
                             <ui:include src="componente/cpt-formulario-resumen.xhtml"/>
                             <hr class="lineaGradian"/>
-                            <p:commandButton value="Actualizar Datos" action="#{MbFormGrupoEmpresa.actualizarGrupoEmpresa}" style="float: right; top: 3px;">
+                            <p:commandButton id="btnActualizar" value="Actualizar Datos" action="#{MbFormGrupoEmpresa.actualizarGrupoEmpresa}" style="float: right; top: 3px;">
                                 <p:confirm header="Confirmación" icon="ui-icon-alert" message="Esta a punto de actualizar la información, desea continuar?"/>
                             </p:commandButton>
                         </p:tab>
@@ -53,6 +53,10 @@
                     </p:confirmDialog>
 
                 </h:form>
+                <p:blockUI block="frmRegistroGrupoEmpresa" widgetVar="blockUI" trigger="frmRegistroGrupoEmpresa:btnActualizar">
+                    Guardando datos...<br />
+                    <p:graphicImage name="imagen/ajax-loading.gif"/>
+                </p:blockUI>
             </ui:define>
         </ui:composition>
     </h:body>
